--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
+    "pdf-parse": "^2.4.5",
     "socket.io": "^4.8.1",
+    "tesseract.js": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "winston": "^3.15.0",
